# continuous-testing

./: .env.sample  .gitignore  Cargo.toml  README.md  again.yaml  docker-compose.yml  post-commit
.github/workflows/: continuous.yml  zuu.yml
continuous/: README.md  RUST.md
continuous/rust/: beta.sh  nightly.sh  rust.json.pkr.hcl  stable.sh
continuous/rust/rust/: nightly.sh  stable.sh
src/: main.rs
