[package]
name = "continuous-testing"
version = "1.1.3"
edition = "2021"
description = "A continuous testing tool"
license-file = "LICENSE" 
repository = "https://github.com/taishingi/continuous-testing"
categories = ["development-tools"]
keywords = ["continuous", "testing"]
authors = ["Willy Micieli"]
readme = "README.md"

[[bin]]
name = "again"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
