[package]
name = "continuous-testing"
version = "2.0.0"
edition = "2021"
description = "A continuous testing tool"
license = "GPL-2.0-or-later"
repository = "https://github.com/taishingi/continuous-testing"
categories = ["development-tools","development-tools::testing"]
keywords = ["continuous", "testing","development","certified"]
authors = ["Willy Micieli"]
readme = "README.md"

[[bin]]
name = "again"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
